Tranformando views de compradores com twitter-bootstrap

--- a/app/views/compradores/index.html.erb
+++ b/app/views/compradores/index.html.erb
@@ -1,27 +1,38 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Compradores</h1>
-
-<table>
+<%- model_class = Comprador -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Nome</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:nome) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @compradores.each do |comprador| %>
       <tr>
+        <td><%= link_to comprador.id, comprador_path(comprador) %></td>
         <td><%= comprador.nome %></td>
-        <td><%= link_to 'Show', comprador %></td>
-        <td><%= link_to 'Edit', edit_comprador_path(comprador) %></td>
-        <td><%= link_to 'Destroy', comprador, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l comprador.created_at %></td>
+        <td>
+          <%= link_to t('.show', :default => t("helpers.links.show")),
+                      comprador_path(comprador), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_comprador_path(comprador), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      comprador_path(comprador),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Comprador', new_comprador_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_comprador_path,
+            :class => 'btn btn-primary' %>
