--- a/app/views/compradores/_form.html.erb
+++ b/app/views/compradores/_form.html.erb
@@ -1,21 +1,34 @@
-<%= form_for(@comprador) do |f| %>
-  <% if @comprador.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@comprador.errors.count, "error") %> prohibited this comprador from being saved:</h2>
+<%= form_for @comprador, :html => { :class => "form-horizontal comprador" } do |f| %>
 
-      <ul>
-      <% @comprador.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <% if @comprador.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@comprador.errors.count, "error") %> prohibited this comprador from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @comprador.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :nome %><br>
-    <%= f.text_field :nome %>
+  <div class="form-group">
+    <%= f.label :nome, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :nome, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:nome) %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                compradores_path, :class => 'btn btn-default' %>
+    </div>
   </div>
+
 <% end %>
