--- a/app/views/compradores/show.html.erb
+++ b/app/views/compradores/show.html.erb
@@ -1,9 +1,19 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Comprador -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @comprador.nome %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:nome) %>:</strong></dt>
+  <dd><%= @comprador.nome %></dd>
+</dl>
 
-<%= link_to 'Edit', edit_comprador_path(@comprador) %> |
-<%= link_to 'Back', compradores_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              compradores_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_comprador_path(@comprador), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              comprador_path(@comprador),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
