--- a/app/views/enderecos/index.html.erb
+++ b/app/views/enderecos/index.html.erb
@@ -1,27 +1,38 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Enderecos</h1>
-
-<table>
+<%- model_class = Endereco -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Cliente</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:cliente_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @enderecos.each do |endereco| %>
       <tr>
-        <td><%= endereco.cliente %></td>
-        <td><%= link_to 'Show', endereco %></td>
-        <td><%= link_to 'Edit', edit_endereco_path(endereco) %></td>
-        <td><%= link_to 'Destroy', endereco, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to endereco.id, endereco_path(endereco) %></td>
+        <td><%= endereco.cliente_id %></td>
+        <td><%=l endereco.created_at %></td>
+        <td>
+          <%= link_to t('.show', :default => t("helpers.links.show")),
+                      endereco_path(endereco), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_endereco_path(endereco), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      endereco_path(endereco),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Endereco', new_endereco_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_endereco_path,
+            :class => 'btn btn-primary' %>
