--- a/app/views/enderecos/show.html.erb
+++ b/app/views/enderecos/show.html.erb
@@ -1,9 +1,19 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Endereco -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Cliente:</strong>
-  <%= @endereco.cliente %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:cliente_id) %>:</strong></dt>
+  <dd><%= @endereco.cliente_id %></dd>
+</dl>
 
-<%= link_to 'Edit', edit_endereco_path(@endereco) %> |
-<%= link_to 'Back', enderecos_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              enderecos_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_endereco_path(@endereco), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              endereco_path(@endereco),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
