Tranformando views de fornecedores com twitter-bootstrap

--- a/app/views/fornecedores/edit.html.erb
+++ b/app/views/fornecedores/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Fornecedor</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @fornecedor %> |
-<%= link_to 'Back', fornecedores_path %>
+<%- model_class = Fornecedor -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
