--- a/app/views/produtos/_form.html.erb
+++ b/app/views/produtos/_form.html.erb
@@ -1,29 +1,48 @@
-<%= form_for(@produto) do |f| %>
-  <% if @produto.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@produto.errors.count, "error") %> prohibited this produto from being saved:</h2>
+<%= form_for @produto, :html => { :class => "form-horizontal produto" } do |f| %>
 
-      <ul>
-      <% @produto.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <% if @produto.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@produto.errors.count, "error") %> prohibited this produto from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @produto.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :descricao %><br>
-    <%= f.text_field :descricao %>
+  <div class="form-group">
+    <%= f.label :descricao, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :descricao, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:descricao) %>
   </div>
-  <div class="field">
-    <%= f.label :preco %><br>
-    <%= f.text_field :preco %>
+  <div class="form-group">
+    <%= f.label :preco, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :preco, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:preco) %>
   </div>
-  <div class="field">
-    <%= f.label :quantidade %><br>
-    <%= f.number_field :quantidade %>
+  <div class="form-group">
+    <%= f.label :quantidade, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :quantidade, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:quantidade) %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                produtos_path, :class => 'btn btn-default' %>
+    </div>
   </div>
+
 <% end %>
