--- a/app/views/produtos/show.html.erb
+++ b/app/views/produtos/show.html.erb
@@ -1,19 +1,23 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Produto -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Descricao:</strong>
-  <%= @produto.descricao %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:descricao) %>:</strong></dt>
+  <dd><%= @produto.descricao %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:preco) %>:</strong></dt>
+  <dd><%= @produto.preco %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:quantidade) %>:</strong></dt>
+  <dd><%= @produto.quantidade %></dd>
+</dl>
 
-<p>
-  <strong>Preco:</strong>
-  <%= @produto.preco %>
-</p>
-
-<p>
-  <strong>Quantidade:</strong>
-  <%= @produto.quantidade %>
-</p>
-
-<%= link_to 'Edit', edit_produto_path(@produto) %> |
-<%= link_to 'Back', produtos_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              produtos_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_produto_path(@produto), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              produto_path(@produto),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
