--- a/app/views/uploads/show.html.erb
+++ b/app/views/uploads/show.html.erb
@@ -10,12 +10,4 @@
   <dd><%= @upload.status.humanize %></dd>
 </dl>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              uploads_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_upload_path(@upload), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              upload_path(@upload),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+<%= link_to t('.back', :default => t("helpers.links.back")), uploads_path, :class => 'btn btn-default'  %>
