Retirando links para metodo que nao existem mais dos indexs

--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -10,33 +10,17 @@
       <th><%= model_class.human_attribute_name(:preco) %></th>
       <th><%= model_class.human_attribute_name(:quantidade) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @produtos.each do |produto| %>
       <tr>
-        <td><%= link_to produto.id, produto_path(produto) %></td>
+        <td><%= produto.id %></td>
         <td><%= produto.descricao %></td>
         <td><%= produto.preco %></td>
         <td><%= produto.quantidade %></td>
         <td><%=l produto.created_at %></td>
-        <td>
-          <%= link_to t('.show', :default => t("helpers.links.show")),
-                      produto_path(produto), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_produto_path(produto), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      produto_path(produto),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-xs btn-danger' %>
-        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_produto_path,
-            :class => 'btn btn-primary' %>
