--- a/app/views/fornecedores/index.html.erb
+++ b/app/views/fornecedores/index.html.erb
@@ -8,31 +8,15 @@
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:nome) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @fornecedores.each do |fornecedor| %>
       <tr>
-        <td><%= link_to fornecedor.id, fornecedor_path(fornecedor) %></td>
+        <td><%= fornecedor.id %></td>
         <td><%= fornecedor.nome %></td>
         <td><%=l fornecedor.created_at %></td>
-        <td>
-          <%= link_to t('.show', :default => t("helpers.links.show")),
-                      fornecedor_path(fornecedor), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_fornecedor_path(fornecedor), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      fornecedor_path(fornecedor),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-xs btn-danger' %>
-        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_fornecedor_path,
-            :class => 'btn btn-primary' %>
