--- a/app/views/vendas/index.html.erb
+++ b/app/views/vendas/index.html.erb
@@ -1,29 +1,29 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Vendas</h1>
+<h1>Vendas</h1>
 
-<table>
+<table class="table ">
   <thead>
     <tr>
-      <th>Cliente</th>
+      <th>Comprador</th>
       <th>Fornecedor</th>
-      <th colspan="3"></th>
+      <th>Produto</th>
+      <th>Preco</th>
+      <th>Quantidade</th>
+      <th>Data importacao</th>
     </tr>
   </thead>
 
   <tbody>
     <% @vendas.each do |venda| %>
       <tr>
-        <td><%= venda.cliente %></td>
-        <td><%= venda.fornecedor %></td>
-        <td><%= link_to 'Show', venda %></td>
-        <td><%= link_to 'Edit', edit_venda_path(venda) %></td>
-        <td><%= link_to 'Destroy', venda, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= venda.comprador.nome %></td>
+        <td><%= venda.fornecedor.nome %></td>
+        <td><%= venda.produto.descricao %></td>
+        <td><%= venda.produto.preco %></td>
+        <td><%= venda.produto.quantidade %></td>
+        <td><%=l venda.created_at %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Venda', new_venda_path %>
