--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Importer</a>
+          <a class="navbar-brand" href="<%= root_path %>">Importer</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="<%= compradores_path %>">Compradores</a></li>
+            <li><a href="<%= fornecedores_path %>">Fornecedores</a></li>
+            <li><a href="<%= produtos_path %>">Produtos</a></li>
+            <li><a href="<%= vendas_path %>">Vendas</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
