Adicionando bootstrap_flash

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
       </div>
     </nav>
     <div class="container">
+      <%= bootstrap_flash %>
       <%= yield %>
     </div><!-- /.container -->
   </body>
