--- a/app/views/vendas/index.html.erb
+++ b/app/views/vendas/index.html.erb
@@ -1,8 +1,8 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Vendas</h1>
-
-<table class="table ">
+<%- model_class = Venda -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Comprador</th>
