--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,10 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+            <li><a href="<%= uploads_path %>">Uploads</a></li>
             <li><a href="<%= compradores_path %>">Compradores</a></li>
             <li><a href="<%= fornecedores_path %>">Fornecedores</a></li>
             <li><a href="<%= produtos_path %>">Produtos</a></li>
-            <li><a href="<%= vendas_path %>">Vendas</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
